--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Battery Waste Management</title>
+    <title>Recellefy.com</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -41,7 +41,7 @@
 
     <nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0">
         <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
-            <h2 class="m-0 text-primary"><i class="fa fa-book me-3"></i>Battery Waste Management</h2>
+            <h2 class="m-0 text-primary"><i class="fa fa-book me-3"></i>Recellefy</h2>
         </a>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -217,7 +217,7 @@
                             </div>
                         </div>
                         <div class="text-center p-4">
-                            <h5 class="mb-0">Anjali Sahani</h5>
+                            <h5 class="mb-0">Aarushi Singh</h5>
                             <small>Chief Adivisor</small>
                         </div>
                     </div>
@@ -287,7 +287,7 @@
             <div class="copyright">
                 <div class="row">
                     <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a class="border-bottom" href="#">Battery Waste Management</a>, All Right Reserved.
+                        &copy; <a class="border-bottom" href="#">Recellefy</a>, All Right Reserved.
                         Designed By <a class="border-bottom" href="https://htmlcodex.com">Niraj Sahani</a>
                     </div>
                     <div class="col-md-6 text-center text-md-end">
