--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width , initial-scale=1.0">
-    <title>website with Login & Registration form</title>
+    <title>Recellefy.com</title>
     <link rel="stylesheet" href="login.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <script src="login.js"></script>
@@ -25,9 +25,9 @@
     <div class="background"></div>
     <div class="container">
         <div class="content">
-            <h2 class="logo"><i class='bx bx-recycle'></i>Battery Waste Management</h2>
+            <h2 class="logo"><i class='bx bx-recycle'></i>Recellefy</h2>
             <div class="text-sci">
-                <h2>Welcome! <br><span>To Battery Waste Management</span></h2>
+                <h2>Welcome! <br><span>To Recellefy</span></h2>
                 <p>Battery waste management is the proper disposal and recycling of batteries to prevent them from being sent to landfills where they can pose environmental and health hazards. Many types of batteries contain toxic chemicals such as lead, cadmium, mercury, and lithium that can leak into the soil and groundwater if not disposed of properly.</p>
                 <div class="social-icons">
                     <a href="https://www.linkedin.com/in/niraj46/"><i class='bx bxl-linkedin'></i></a>
